--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,6 +2,7 @@ html {
   font-size: 62.5%;
 }
 body {
- font-family: Helvetica, Arial, sans-serif;
- font-size: 1.6rem;
+  background: $dark-blue;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: $m-size;
 }
