--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,4 +5,5 @@
 @import './components/container';
 @import './components/option';
 @import './components/header';
+@import './components/modal';
 @import './components/widget';
