--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -2,7 +2,7 @@
     background: $off-black;
     color: white;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding: $m-size 0;
 }
 
@@ -16,4 +16,10 @@
     font-size: $m-size;
     font-weight: 500;
     margin: 0;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .header {
+        margin-bottom: $xl-size;
+    }
 }
